# python-epub

./: CMakeLists.txt  README  TODO  epub_cpp_wrappers.h  epub_global.h  typesystem_epub.xml
simple-ui/: bookviewer.py
tests/: CMakeLists.txt  basic_test.py  beyond-the-wall-of-sleep.epub  contents_test.py  einfo.py  metadata_test.py  toc_test.py  version_test.py
